Add page with list of names

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const name = urlParams.get('name');
+        if (name === null) {
+            window.location.href = "/pages.html";
+        }
         fetch('urls.json', { cache: "no-store" }).then(response => {
             response.json().then(
                 paths => {
