Add relative path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         const urlParams = new URLSearchParams(window.location.search);
         const name = urlParams.get('name');
         if (name === null) {
-            window.location.href = "/pages.html";
+            window.location.href = "pages.html";
         }
         function updateURL() {
             fetch('urls.json', { cache: "no-store" }).then(response => {
