--- a/pages.html
+++ b/pages.html
@@ -12,7 +12,7 @@
                         var li = document.createElement('li')
                         var a = document.createElement('a');
                         a.appendChild(document.createTextNode(name));
-                        a.href = `/?name=${name}`;
+                        a.href = `../?name=${name}`;
                         li.appendChild(a)
                         ul.appendChild(li)
                     }
