--- a/frame.html
+++ b/frame.html
@@ -5,7 +5,7 @@
         const urlParams = new URLSearchParams(window.location.search);
         const name = urlParams.get('name');
         function updateURL() {
-            fetch('urls.json', { cache: "no-store" }).then(response => {
+            fetch('https://decisiontheatrestorage.blob.core.windows.net/pi-demos/urls.json', { cache: "no-store" }).then(response => {
                 response.json().then(
                     paths => {
                         path = paths[name]
