--- a/image.html
+++ b/image.html
@@ -4,6 +4,7 @@
         const path = urlParams.get('path');
         var img = document.createElement("img");
         img.src = path;
+        img.style.height = "100%"
         document.body.appendChild(img)
     </script>
 </body>
